# Proyecto-final-Juego

./: README.md
EjemplosJuego/: README.md  TODO.md
EjemplosJuego/src/: 00_Ventana.cpp  01_Imagen.cpp  02_Sprite.cpp  03_1_Pikachu.cpp  04_Texto.cpp  06_Primitivas.cpp  07_Fisica.cpp
NUEVO/SnakeVsBlock/: CMakeCache.txt  CMakeLists.txt  INSTRUCCIONES.md  Makefile  PROYECTO_COMPLETADO.md  PROYECTO_FINAL.md  QUICKSTART.md  README.md  README.txt  README_SIMPLE.md  SnakeVsBlock_sdl2  SnakeVsBlock_terminal  build_and_run.sh  compile.bat  compile_simple.sh  game.py  info.sh  main.cpp  main_sdl2.cpp  main_terminal.cpp
